[metadata]
name = memtop

author = Tibor Bamhor, Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

version = 1.0.4

description = view memory consumption of processes
long_description = file: README.md
long_description_content_type = text/markdown
keywords = memory, consumption

platforms = Linux, MacOS X

url = https://github.com/MartinThoma/memtop
download_url = https://github.com/MartinThoma/memtop

license = GPLv2

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 7 - Inactive
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Utilities

[options]
zip_safe = false
packages = find:

[upload_docs]
upload-dir = docs/_build/html
